--- a/client/src/profile.module.css
+++ b/client/src/profile.module.css
@@ -17,6 +17,7 @@ figure {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 120px;
 }
   
   .deleteAccount button {
