--- a/client/src/search.module.css
+++ b/client/src/search.module.css
@@ -1,6 +1,3 @@
-html {
-  background:url('./landing_background.jpg');
-}
 
 .moddedWrap {
   height: 100vh;
